--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ blockquote,
 dl,
 dd {
   margin: 0;
+  padding: 0;
 }
 
 /* Set core body defaults */
@@ -17,6 +18,7 @@ body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
+  background-image: url(morning.jpg);
 }
 
 /* Inherit fonts for inputs and buttons */
@@ -44,6 +46,7 @@ select {
   background-color: grey;
   height: 100%;
   width: 100%;
+  position: sticky;
 }
 
 #mainInfo {
@@ -74,6 +77,7 @@ select {
   padding-block: 2rem;
   margin-inline: auto;
   background-color: #2196f3;
+  /* height:100vh; */
 }
 
 .pictureOfMe {
@@ -99,7 +103,7 @@ select {
 .pictureOfMe > img {
   object-fit: cover;
   width: 100%;
-  max-height: 100%;
+  height: 100%;
 }
 
 .info > p {
@@ -113,13 +117,56 @@ select {
   padding: 1vw;
 }
 
-@media (max-width: 70rem) {
+/*
+@media (max-width: 90rem) {
+  .web-grid {
+    grid-template-areas:
+      "left content content right"
+      ".    content content    ."
+      ".    content content    .";
+  }
+
+  #summaryOfMe {
+    grid-template-areas: 
+    "picture picture"
+    "info info"
+    "final final"
+    "final final";
+  }
+}
+
+*/
+
+@media (max-width: 90rem) {
   .web-grid {
     grid-template-areas:
       "left"
       "content"
-      "content"
       "right";
+  }
+
+  #summaryOfMe {
+    grid-template-areas: 
+    "picture info info"
+    "picture info info"
+    "final final final"
+    "final final final";
+  }
+}
+
+@media (max-width: 50rem) {
+  .web-grid {
+    grid-template-areas: 
+    "left"
+    "content"
+    "right";
+  }
+
+  #summaryOfMe {
+    grid-template-areas: 
+    "picture picture"
+    "info    info"
+    "final   final";
   }
 }
 /* 
@@ -131,3 +178,7 @@ select {
       "right";
   }
 } */
+
+.burger-menu {
+  display: none;
+}
